syntax = "proto3";

package saphe.protobuf;

option java_package = "com.saphe.communication_types.dto";
option csharp_namespace = "Saphe.Protobuf.Public.V1.Dto";

import "google/protobuf/wrappers.proto"; 
import "LocationDto.proto";

message LineStringPoiGeometryDto {
    repeated LocationDto lineString = 1;
    google.protobuf.FloatValue firstHeading = 2; // Heading of the first point in the linestring [0.0, 360.0) degrees
    google.protobuf.FloatValue lastHeading = 3;  // Heading of the last point in the linestring [0.0, 360.0) degrees
}